<resources>
    <string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase any internal data stored by the app)</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_forum">Support forum</string>
    <string name="about_license">License</string>
    <string name="about_site">Website</string>
    <string name="about_source">Source code</string>
    <string name="about_title">About F-Droid</string>
    <string name="about_version">Version</string>
    <string name="add_key">Add Key</string>
    <string name="added_on">Added on %s</string>
    <string name="adding_apks_format">Adding %s to repo…</string>
    <string name="allPerms">All</string>
    <string name="all_other_repos_fine">"All other repos didn't create errors."</string>
    <string name="allow">Allow</string>
    <string name="antiads">Ads</string>
    <string name="antiads_key">Ads</string>
    <string name="antiadslist">This app contains advertising</string>
    <string name="antidisabledalgorithm">Signed Using An Unsafe Algorithm</string>
    <string name="antidisabledalgorithm_key">DisabledAlgorithm</string>
    <string name="antidisabledalgorithmlist">This app has a weak security signature</string>
    <string name="antifeatures">Anti-features</string>
    <string name="antifeatureswarning">This app has features you may not like.</string>
    <string name="antiknownvuln">Known Vulnerability</string>
    <string name="antiknownvuln_key">KnownVuln</string>
    <string name="antiknownvulnlist">This app contains a known security vulnerability</string>
    <string name="antinonfreead">Non-Free Addons</string>
    <string name="antinonfreead_key">NonFreeAdd</string>
    <string name="antinonfreeadlist">This app promotes non-free add-ons</string>
    <string name="antinonfreeassets">Non-Free Assets</string>
    <string name="antinonfreeassets_key">NonFreeAssets</string>
    <string name="antinonfreeassetslist">This app contains non-free assets</string>
    <string name="antinonfreedep">Non-Free Dependencies</string>
    <string name="antinonfreedep_key">NonFreeDep</string>
    <string name="antinonfreedeplist">This app depends on other non-free apps</string>
    <string name="antinonfreenet">Non-Free Network Services</string>
    <string name="antinonfreenet_key">NonFreeNet</string>
    <string name="antinonfreenetlist">This app promotes non-free network services</string>
    <string name="antinosource">Source Code No Longer Available</string>
    <string name="antinosource_key">NoSourceSince</string>
    <string name="antinosourcesince">The source code is no longer available, no updates possible.</string>
    <string name="antinsfw">This app contains content that should not be publicized or visible everywhere</string>
    <string name="antinsfw_key">NSFW</string>
    <string name="antiothers">Other Anti-features</string>
    <string name="antiothers_key">_anti_others_</string>
    <string name="antitrack">Tracking</string>
    <string name="antitrack_key">Tracking</string>
    <string name="antitracklist">This app tracks and reports your activity</string>
    <string name="antiupstreamnonfree">Upstream Non-Free</string>
    <string name="antiupstreamnonfree_key">UpstreamNonFree</string>
    <string name="antiupstreamnonfreelist">The upstream source code is not entirely Free</string>
    <string name="app__install_downloaded_update">Update</string>
    <string name="app__tts__cancel_download">Cancel download</string>
    <string name="app__tts__downloading_progress">Downloading, %1$d%% complete</string>
    <string name="app_description">F-Droid is an installable catalogue of FOSS (Free and Open Source Software) applications for the Android platform. The client makes it easy to browse, install, and keep track of updates on your device.</string>
    <string name="app_details">App Details</string>
    <string name="app_details__incompatible_mismatched_signature">Different signature to installed version</string>
    <string name="app_details__no_versions__explain_incompatible_signatures">The installed version is not compatible with any available versions. Uninstalling the app will enable you to view and install compatible versions. This often occurs with apps installed via Google Play or other sources, if they are signed by a different certificate.</string>
    <string name="app_details__no_versions__no_compatible_signatures">No versions with compatible signature</string>
    <string name="app_details__no_versions__none_compatible_with_device">No versions compatible with device</string>
    <string name="app_details__no_versions__show_incompat_versions">To show incompatible versions here anyway, enable the \"%1$s\" setting.</string>
    <string name="app_details_donate_prompt">%1$s is created by %2$s. Buy them a coffee!</string>
    <string name="app_details_donate_prompt_unknown_author">Buy the developers of %1$s a coffee!</string>
    <string name="app_details_subject">%1$s on F-Droid</string>
    <string name="app_incompatible">Incompatible</string>
    <string name="app_inst_known_source">Installed (from %s)</string>
    <string name="app_inst_unknown_source">Installed (from unknown source)</string>
    <string name="app_installed">Installed</string>
    <string name="app_installed_media">File installed to %s</string>
    <string name="app_list__dismiss_app_update">Update ignored</string>
    <string name="app_list__dismiss_downloading_app">Download canceled</string>
    <string name="app_list__dismiss_installing_app">Installation cancelled</string>
    <string name="app_list__dismiss_vulnerable_app">Vulnerability ignored</string>
    <string name="app_list__name__downloading_in_progress">Downloading %1$s</string>
    <string name="app_list__name__successfully_installed">%1$s installed</string>
    <string name="app_list_download_ready">Downloaded, ready to install</string>
    <string name="app_list_results_hidden_antifeature_settings">Some results were hidden based on your antifeature settings.</string>
    <string name="app_name">F-Droid</string>
    <string name="app_name_debug">F-Droid Debug</string>
    <string name="app_new">New</string>
    <string name="app_not_installed">Not Installed</string>
    <string name="app_permission_storage">F-Droid needs the storage permission to install this to storage. Please allow it on the next screen to proceed with installation.</string>
    <string name="app_recommended_version_installed">Version %1$s (Recommended)</string>
    <string name="app_repository">Repository: %1$s</string>
    <string name="app_size">Size: %1$s</string>
    <string name="app_suggested">Suggested</string>
    <string name="app_version_x_available">Version %1$s available</string>
    <string name="app_version_x_installed">Version %1$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcompatibility">App compatibility</string>
    <string name="applicationId">org.fdroid.fdroid</string>
    <string name="apps">Apps</string>
    <string name="back">Back</string>
    <string name="bad_fingerprint">Bad fingerprint</string>
    <string name="banner_no_data_or_wifi">No Data or WiFi enabled</string>
    <string name="banner_no_internet">No Internet</string>
    <string name="banner_updating_repositories">Updating repositories</string>
    <string name="bluetooth_activity_not_found">No Bluetooth send method found, choose one!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="by_author_format">by %s</string>
    <string name="cache_downloaded">Keep cached apps</string>
    <string name="cancel">Cancel</string>
    <string name="categories__empty_state__no_categories">No categories to display</string>
    <string name="category_Connectivity">Connectivity</string>
    <string name="category_Development">Development</string>
    <string name="category_Games">Games</string>
    <string name="category_Graphics">Graphics</string>
    <string name="category_Internet">Internet</string>
    <string name="category_Money">Money</string>
    <string name="category_Multimedia">Multimedia</string>
    <string name="category_Navigation">Navigation</string>
    <string name="category_Phone_SMS">Phone &amp; SMS</string>
    <string name="category_Reading">Reading</string>
    <string name="category_Science_Education">Science &amp; Education</string>
    <string name="category_Security">Security</string>
    <string name="downloading">Downloading…</string>
    <string name="https">https://</string>
    <string name="login_name">Username</string>
    <string name="more">More</string>
    <string name="repo_add_fingerprint">Fingerprint (optional)</string>
    <string name="repo_add_url">Repository address</string>
    <string name="repo_description">Description</string>
    <string name="repo_details">Repository</string>
    <string name="repo_edit_credentials">Change Password</string>
    <string name="repo_fingerprint">Fingerprint of the signing key (SHA-256)</string>
    <string name="repo_last_update">Last update</string>
    <string name="repo_name">Name</string>
    <string name="repo_not_yet_updated">This repository has not been used yet. You need to enable it to view the apps it provides.</string>
    <string name="repo_num_apps">Number of apps</string>
    <string name="repo_official_mirrors">Official mirrors</string>
    <string name="repo_url">Address</string>
    <string name="repo_user_mirrors">User mirrors</string>
    <string name="swap_dont_show_again">"Don't show this again"</string>
    <string name="swap_nfc_description">If your friend has F-Droid and NFC turned on touch your devices together.</string>
    <string name="swap_nfc_title">Touch to swap</string>
    <string name="transition_app_item_icon">transition_app_item_icon</string>
</resources>