<?xml version="1.0" encoding="utf-8"?>
<org.fdroid.fdroid.nearby.SwapView android:orientation="vertical" android:background="@color/swap_blue" android:paddingTop="38.799988dip" android:layout_width="fill_parent" android:layout_height="fill_parent" swap:toolbarTitle="@string/swap_nfc_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:swap="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/icon_nfc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" swap:srcCompat="@drawable/nfc_touch" />
    <TextView android:id="@id/text_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/swap_nfc_description" android:layout_below="@id/icon_nfc" style="@style/SwapTheme.Wizard.MainText" />
    <CheckBox android:id="@id/checkbox_dont_show" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/swap_dont_show_again" android:layout_below="@id/text_description" android:layout_centerHorizontal="true" style="@style/SwapTheme.Wizard.Text" />
</org.fdroid.fdroid.nearby.SwapView>