<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="24.0dip" android:paddingTop="20.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="24.0dip" android:paddingEnd="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/add_repo_form" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout android:id="@id/edit_uri" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/https" android:hint="@string/repo_add_url" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:typeface="monospace" android:id="@id/edit_fingerprint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:hint="@string/repo_add_fingerprint" android:digits="0123456789ABCDEFabcedf: " style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="3" android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:id="@id/overwrite_message" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/text_searching_for_repo" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</RelativeLayout>