<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/details_activity_padding" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip">
            <RelativeLayout android:id="@id/icon_and_name" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/icon" android:layout_width="72.0dip" android:layout_height="72.0dip" android:src="@drawable/ic_repo_app_default" android:scaleType="fitCenter" android:layout_alignParentTop="true" android:layout_marginEnd="8.0dip" android:layout_alignParentStart="true" android:transitionName="@string/transition_app_item_icon" />
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_alignParentTop="true" android:layout_toEndOf="@id/icon" android:layout_alignParentEnd="true">
                    <TextView android:textAppearance="@style/DetailsAppTitleStyle" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@id/author" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textAppearance="@style/DetailsLastUpdatedStyle" android:textColor="@android:color/darker_gray" android:id="@id/text_last_update" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/progress_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/icon_and_name">
                <ImageView android:id="@id/progress_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_close_clear_cancel" android:layout_centerVertical="true" android:contentDescription="@string/app__tts__cancel_download" android:layout_alignParentEnd="true" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:id="@id/progress_label" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/downloading" android:contentDescription="@string/downloading" android:layout_alignParentStart="true" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:id="@id/progress_percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toStartOf="@id/progress_cancel" />
                <ProgressBar android:id="@id/progress_bar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_below="@id/progress_label" android:layout_toStartOf="@id/progress_cancel" android:layout_alignParentStart="true" style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
            </RelativeLayout>
            <LinearLayout android:gravity="end" android:id="@id/button_layout" android:paddingBottom="4.0dip" android:visibility="visible" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/icon_and_name">
                <com.google.android.material.button.MaterialButton android:ellipsize="marquee" android:id="@id/secondaryButtonView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0" style="@style/DetailsSecondaryButtonStyle" />
                <com.google.android.material.button.MaterialButton android:ellipsize="marquee" android:id="@id/primaryButtonView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0" android:layout_marginStart="8.0dip" style="@style/DetailsPrimaryButtonStyle" />
            </LinearLayout>
        </RelativeLayout>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textStyle="bold" android:id="@id/summary" android:background="?detailPanel" android:padding="8.0dip" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:textIsSelectable="true" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@id/latest" android:background="?detailPanel" android:paddingLeft="8.0dip" android:paddingTop="16.0dip" android:paddingRight="8.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@id/description" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:textIsSelectable="true" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/anti_features_section" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="center_vertical" android:id="@id/anti_features_warning" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/antifeatureswarning" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_warning" style="@style/DetailsAntiFeaturesWarningStyle" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textStyle="bold" android:id="@id/label_anti_features" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/antifeatures" android:textAllCaps="true" />
            <org.fdroid.fdroid.views.appdetails.AntiFeaturesListingView android:id="@id/anti_features_full_listing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" />
        </LinearLayout>
        <TextView android:layout_gravity="center_horizontal" android:id="@id/description_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/more" style="@style/DetailsMoreButtonStyle" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>